--- a/masterapp/templates/Httpalert1.html
+++ b/masterapp/templates/Httpalert1.html
@@ -102,7 +102,7 @@
           <div class="alert alert-danger d-flex align-items-center" role="alert" style="width:115%;">
             <svg class="bi flex-shrink-0 me-2"  style="height:50px; width:30%" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
             <div>
-             <h2> Data Didn't Receive From Scanner.Please Check The Scanner Connection</h2>
+             <h2> Please Pause The Printer And Click The Navigate To Batch Detail Button</h2>
             </div>
           </div>
         </div>
