--- a/masterapp/templates/scannersoftware.html
+++ b/masterapp/templates/scannersoftware.html
@@ -1,74 +1,124 @@
-
 <!DOCTYPE html>
-
-
   <html lang="en">  
     <head>  
       <meta charset="UTF-8">  
-      <title>Index</title>  
-      {% load static %} 
-      <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-      <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-        crossorigin="anonymous"
-      /> 
-      <script type="text/javascript"> 
-        window.history.forward(); 
-        function noBack() { 
-            window.history.forward();
+        <title>Index</title>  
+        {% load static %} 
+        <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+        <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+          crossorigin="anonymous"
+        /> 
+        <script type="text/javascript"> 
+          window.history.forward(); 
+          function noBack() { 
+              window.history.forward();
+          } 
+        </script> 
+    </head>   
+    <body style="background-color:#bebebe" > 
+      <br></br>
+      <br></br>
+      <div class="container">
+        <form method="POST" class="post-form" action="{{qs.id}}"> 
+          {% csrf_token %}
+            <div class="row">
+              <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+                <symbol id="check-circle-fill" viewBox="0 0 16 16">
+                  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                </symbol>
+                <symbol id="info-fill" viewBox="0 0 16 16">
+                  <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+                </symbol>
+                <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+                  <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </symbol>
+              </svg>
+              <div class="col-3"></div>
+              <div class="col-6">
+
+                <div class="alert alert-primary d-flex align-items-center" role="alert">
+                  <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Info:" style="height:30px; width:10%"><use xlink:href="#info-fill"/></svg>
+                  <div>
+                    If You Want To Start The Process Click The View Button 
+                  </div>
+                </div>
+
+                
+
+                
+              </div>
+              <div class="col-3"></div>
+            </div>
+          
+            <div>
               
+             
+              <div class="row">
+                <br></br>
+                <div class="col-4">  
+                </div>
+                <div class="col-4">
 
-        } 
-       
-    </script>
-    </head>  
-    <body style="background-color:#bebebe"> 
-    
-    <form method="POST" class="post-form" action="{{qs.id}}">  
-                    {% csrf_token %}
+                  <table border="4" class="table table-responsive table-dark" >
+                      
+                    <tr></tr>
+                   <center> <tr>
+                      <td>
+                        <h4>Gtin : {{job.gtin }}</h4>
+                      </td>
+                    </tr>
+                  </center>
+                    <tr></tr>
+                    <tr>
+                      <td> <h4>
+                        Batch Number  : {{job.lot }}</h4>
+                      </td>
+                    </tr>
+                    <tr></tr>
+                    <tr>
+                      <td>
+                       {% if job.loadpause == 0 %}    
+                    <a href="{%url 'emp-editjob' job.id%}" class="btn btn-success" style="">View</a>
+                  {% else %}
+                    <a href="{%url 'pause-printer' job.id%}" class="btn btn-success" style="">Pause Start Page</a>
+                  {% endif %} 
+                </td>
+                  </tr>
+                  </table>
+                  {% comment %} <h4 style=""></h4>
+                  <br></br>
+                  <h4 style=""></h4> {% endcomment %}
+                  
+                </div>
+                <div class="col-4">  
+           
+                
+                
+                    
+              
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">  
+                </div>
+                <div class="col-2">
+                  
+                  
+                 
+                </div>
+                <div class="col-6">   
+                  <a href="{%url 'indexpage' %}" class="btn btn-info" style= "color:black;" >Back To List Page</a>      
+                </div>
+              </div>
+            
+          </div> 
+        </form>
+      </div>   
+    </body>  
+  
+</html>  
 
-
-
-<div class="row">
- 
-    <div class="col-4" >
-      <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-        <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
-          <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-        </symbol>
-      </svg>
-      <div class="alert alert-info d-flex align-items-center" role="alert" style="width:100%; margin-left:540px;margin-top:200px;">
-        <svg class="bi flex-shrink-0 me-2" style="height:50px;margin-left:-100px;" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-        <div style="margin-left:-100px;">
-          If You Want To Start The Process Click The View Button        
-        </div>
-      </div>
-      {% comment %} <div class="alert alert-info"  role="alert" style="width:100%; margin-left:540px;margin-top:200px;" >
-
-         If You Want To Start The Process Click The View Button             
-                                      
-    </div> {% endcomment %}
-    <div style="border: 4px solid rgb(51, 74, 72);margin-left:540px;width:100%;">
-      <br/>
-      <h4 style="margin-left:220px;width:100%;">Gtin : {{job.gtin }}</h4>
-      <br/>
-      <h4 style="margin-left:220px;width:100%;">Batch  : {{job.lot }}</h4>
-      <br/>
-    {% if job.loadpause == 0 %}  
-    <a href="{%url 'emp-editjob' job.id%}" class="btn btn-success" style="margin-left:240px;width:20%;">View</a>
-    {% else %}
-    <a href="{%url 'pause-printer' job.id%}" class="btn btn-success" style="margin-left:240px;width:20%;">Pause Start Page</a>
-    {% endif %}
-    <br/>
-    <a href=""  style="margin-left:240px;width:20%;"></a>
-      </div> 
-          <br/>
-          </div>  
-
- <a href="{%url 'indexpage' %}" class="btn btn-info" style= "color:black; width:10%;height:40px; margin-left:340px;margin-top:530px" >Back To List Page</a>      
-</form>
-
-</body>
-</html>    
+  
