--- a/masterapp/static/css/signin.css
+++ b/masterapp/static/css/signin.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  margin: 0;
+  margin: 0px;
   padding: 0;
   display: flex;
   justify-content: center;
