--- a/masterapp/templates/gradecount.html
+++ b/masterapp/templates/gradecount.html
@@ -67,7 +67,8 @@
           </div> 
           <br></br>
        
-       <a href="javascript:window.history.back();" class="btn btn-primary" style="width:20%; margin-left:500px;">Back To Pause/Start Page</a> 
+       {% comment %} <a href="javascript:window.history.back();" class="btn btn-primary" style="width:20%; margin-left:500px;">Back To Pause/Start Page</a>  {% endcomment %}
+       <a href="{%url 'pause-printer' qs.id%}" style="width:20%; margin-left:500px;"> Back To Pause/Start Page</a>
            
           
       </form>  
