--- a/masterapp/templates/messagepage.html
+++ b/masterapp/templates/messagepage.html
@@ -5,55 +5,130 @@
       <title>Index</title>  
       {% load static %} 
       <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
         crossorigin="anonymous"
       /> 
-
+    
+      <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     </head>  
-
-
-
-<div class="row">
-    <div class="col-3"></div>
-    <div class="col-8">
-       
-    </div>
-    <div class="col-3"></div>
-    <div class="col-3"></div>
-</div>
-</div>
-
-<div class="row">
-    <div class="col-4"></div>
-    <div class="col-4" >
+    <body style="background-color:#bebebe"> 
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+        <symbol id="check-circle-fill" viewBox="0 0 16 16">
+          <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+        </symbol>
+        <symbol id="info-fill" viewBox="0 0 16 16">
+          <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+        </symbol>
         <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
           <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
         </symbol>
-      </svg> 
-
-      <div class="alert alert-danger d-flex align-items-center" role="alert" style="width:100%;height:70px; margin-left:10px;margin-top:300px;">
-        <svg class="bi flex-shrink-0 me-2" style="height:50px;margin-left:-100px;" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-        <div style="margin-left:-100px;">
-         <h2> Please Turn On the Printer</h2>
-        </div>
+      </svg>
+                  
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div> 
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div>
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div>
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div>
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div>
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div> 
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div>
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div>
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div>
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+      </div>
+      <div class="row">
+      
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
+        <div class="col-4">&nbsp;</div>
       </div>
 
-        <div class="col-4"   style="margin-left:200px;">
-          {% comment %} <a href="javascript:window.history.back();" class="btn btn-primary">Back To Details Page</a> {% endcomment %}
-          <a href="{%url 'indexpage' %}" class="btn btn-primary">Back To List Page</a>
-         </div>
+  
+      <div class="row">
+      
+        <div class="col-4"></div>
+        <div class="col-5" id="ghj">
+          <div class="alert alert-danger d-flex align-items-center" role="alert" style="width:115%;">
+            <svg class="bi flex-shrink-0 me-2"  style="height:50px; width:30%" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+            <div>
+             <h2> Data Didn't Receive From Printer.Please Check The Printer Connection</h2>
+            </div>
+          </div>
+        </div>
+         <div class="col-3"></div> 
+      </div>
+      </div>
+
+      <br/>
     
-                    {% comment %} <div class="alert alert-danger"  role="alert" style="width:100%; margin-left:100px;margin-top:300px;" >
-                                       <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please Turn On the Printer</h2>
-                                       </div>
-                                       <br/> 
-                                       <div class="col-4"   style="margin-left:300px;">
-                                        <a href="javascript:window.history.back();" class="btn btn-primary">Back To Details Page</a>
-                                       </div> {% endcomment %}
     </div>
 
+    <div class="row">
+      <div class="col-4">  
+      </div>
+      {% comment %} <div class="col-3">
+        
+        
+       
+      </div> {% endcomment %}
+      <div class="col-4">   
+        <a href="{%url 'indexpage' %}" class="btn btn-primary" style= "color:black;" >Back To List Page</a>   
+      </div>
+      <div class="col-4"></div>
+    </div>
+  
+<script src="https://kit.fontawesome.com/4ad3a78962.js" crossorigin="anonymous"></script> 
+</body>
+
+</html>    
