--- a/masterapp/templates/returnserial.html
+++ b/masterapp/templates/returnserial.html
@@ -2,98 +2,141 @@
   <html lang="en">  
     <head>  
       <meta charset="UTF-8">  
-      <title>Index</title>  
-      {% load static %} 
-      <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-      <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-        crossorigin="anonymous"
-      />  
-    </head>  
-    <body style="background-color:#bebebe">  
-    
-      <form method="POST" class="post-form" action="{{qs.id}}">  
-        {% csrf_token %}
-        <br/> <br/> <br/><br/><br/><br/>
+        <title>Index</title>  
+        {% load static %} 
+        <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+        <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+          crossorigin="anonymous"
+        /> 
+        <script type="text/javascript"> 
+          window.history.forward(); 
+          function noBack() { 
+              window.history.forward();
+          } 
+        </script> 
+    </head>   
+    <body style="background-color:#bebebe" > 
+      <br></br>
+      <br></br>
+      <div class="container">
        
-        <a href="{%url 'indexpage' %}" class="btn btn-info" style= "color:black; margin-left:1400px" >Back To List Page</a>      
-        <div class="container text-center" style="border: 4px solid rgb(51, 74, 72); background-color:#dcdcdc">
-          <div class="row">
+        <form method="POST" class="post-form" action="{{qs.id}}"> 
+          {% csrf_token %}
+            <div class="row">
+
+              <div class="col-12">
+                <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+                  <symbol id="check-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                  </symbol>
+                  <symbol id="info-fill" viewBox="0 0 16 16">
+                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+                  </symbol>
+                  <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                  </symbol>
+                </svg>
+                       
            
-            <div classname="col-12">
-                    <h1 ><font face="times new roman" >Return Serial Numbers</font></h1>
-           
-            </div>
-            <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-              <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
-                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-              </symbol>
-            </svg>
-            <div class="alert alert-primary d-flex align-items-center" role="alert" style="width:70%; margin-left:180px">
-              <svg class="bi flex-shrink-0 me-2" style="height:50px;margin-left:-100px;" role="img" aria-label="Info:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-              <div style="margin-left:-100px;">
-                Please Click On Return Serialnumbers Button For Returning Serialnumbers.
+                <div class="alert alert-info d-flex align-items-center" role="alert" style="width:100%;">
+                  <svg class="bi flex-shrink-0 me-2" style="height:30px; width:10%" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"></svg>
+                    Please Click On Return Serialnumbers Button For Returning Serialnumbers.
                 If You Click Once Batch Will Be Stopped  Permanently And Cannot Load It Again.
+                </div>
               </div>
             </div>
-            {% comment %} <div class="alert alert-primary"  role="alert" style="width:70%; margin-left:180px" >
-                    Please Click On Return Serialnumbers Button For Returning Serialnumbers.
-                    If You Click Once Batch Will Be Stopped  Permanently And Cannot Load It Again.
-                    
-                   </div>  {% endcomment %}
+            <div class="container">
+            <div class="row">
+              <div class="col-4">  
+              </div>
+              <div class="col-4">  
+              </div> 
+               
+            <div class="col-4" >
+              
+              <a href="{%url 'indexpage' %}" class="btn btn-info" style= "color:black;" >Back To List Page</a> 
+            </div>
           </div>
-          <br></br>
-          <div class="row" style="margin-left:250px">
-            <br></br>
-            <div class="col-3">  
-              <h5 style="margin-left:180px;">Lot</h5>
-              <br/> <br/><br/>
-             
-              <h5 style="margin-left:180px">Gtin</h5> 
-              
-            </div>
-            <div class="col-3">
-              <input type="text" style="width:120%;height:50px"   name="eid" id="id_eid" required maxlength="50" value="{{ qs.lot }}"/> 
-              <br/><br/><br/>
-              <input type="text" style="width:120%;height:50px"  name="econtact" id="id_econtact" required maxlength="15" value="{{ qs.gtin}}" />  
-              <br/><br/><br/>
-              
-            </div>
-            <br></br>
-            <div class="col-3">
-              
-              <br/><br/><br/>
-              
-            </div>
-           
-          </div> 
-          <br></br>
+        </div>
+        <br/>
+
+        <div class="container text-center" style="border: 4px solid rgb(51, 74, 72); background-color:#d3d3d3;width:70%;">
           <div class="row">
             <div classname="col-12">
-              
-             
-
-          {% if returnmessa == 1 %} 
-          <div class="alert alert-success d-flex align-items-center" role="alert" style="width:35%; margin-left:20px;margin-top:-100px;">
-           
-            <div style="margin-left:100px;">
-             
-           Returned Serialnumbers Successfully.
+              <h1 ><font face="times new roman" ><center>Return Serial Numbers</center></font></h1>
             </div>
           </div>
-          {% endif %}   
+              
+          <br/>
+          <div class="row">
+            <div class="col-3">  
                     
-          {% if qs.stopbtnresponse == 1 %}
-          <a href="{%url 'return-numbres' qs.id%}" class="btn btn-warning"  style= "color:black;margin-left:30px;margin-top:-40px;width:20%"; >Return Serialnumbers</a>
-          {% endif %}  
-              <br/>
             </div>
-          </div> 
-         
-      </form>  
-  </body>  
+            <div class="col-6"> 
+              {% if returnmessa == 1 %} 
+                <div class="alert alert-success d-flex align-items-center" role="alert" style="width:100%;">
+                  <svg class="bi flex-shrink-0 me-0" role="img" p-"5" aria-label="Success:" style="height:30px; width:10%" >  <use xlink:href="#check-circle-fill"/></svg>
+                  Returned Serialnumbers Successfully.
+                    
+                </div>
+              {% endif %}  
+            </div>
+            <div class="col-3">  
+            </div>
+          </div>
+               
+            
+          <div class="row">
+               
+            <div class="col-2">  
+            </div>
+            <div class="col-8">  
+              <div class="row">
+                <div class="col-4">  
+                  <h5>Lot</h5>
+                  <br></br>
+                  <h5 >Gtin</h5> 
+                   
+                  <br></br>
+                </div>
+                <div class="col-4">  
+                  <input type="text" readOnly="true" style="width:130%;height:50px"   name="eid" id="id_eid" required maxlength="50" value="{{ qs.lot }}"/> 
+                  <br></br>
+                  <input  type="text" readOnly="true" style="width:130%;height:50px"  name="econtact" id="id_econtact" required maxlength="15" value="{{ qs.gtin}}" />  
+                  <br></br>
+                </div>
+              </div>
+              
+             {% comment %} </div>
+            <div class="col-3" >  {% endcomment %}
+                
+                  
+                    
+                 
+            </div> 
+            <div class="col-2"></div>
+          </div>
+          <div class="row">  
+                <div class="col-12" >
+                 
+                  
+                  {% if qs.stopbtnresponse == 1 %}
+                 <a href="{%url 'return-numbres' qs.id%}" class="btn btn-warning"  style= "color:black;"; >Return Serialnumbers</a>
+                  {% endif %}
+                  
+                </div>
+               
+                
+          </div>
+          <br/> 
+        </div> 
+        </form>
+      </div>   
+    </body>  
+  
 </html>  
 
   
